--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Art Fusion</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Iceberg&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -24,7 +25,63 @@
 		</div>
 		<div class="menu-btn"></div>
 	  </header>
-	  
+
+	  <section class="slideshow">
+		<div class="img-slider">
+
+			<div class="slide active">
+				<img src="images/Kaido123.png">
+				<div class="info">
+					<h2>Slide Name 1</h2>
+					<p>Lorem ipsum tayms 2 tayms 2</p>
+				</div>
+			</div>
+			<div class="slide">
+				<img src="images/Kaido123.png">
+				<div class="info">
+					<h2>Slide Name 2</h2>
+					<p>Lorem ipsum tayms 2 tayms 2</p>
+				</div>
+			</div>
+			<div class="slide">
+				<img src="images/Kaido123.png">
+				<div class="info">
+					<h2>Slide Name 3</h2>
+					<p>Lorem ipsum tayms 2 tayms 2</p>
+				</div>
+			</div>
+			<div class="slide">
+				<img src="images/Kaido123.png">
+				<div class="info">
+					<h2>Slide Name 4</h2>
+					<p>Lorem ipsum tayms 2 tayms 2</p>
+				</div>
+			</div>
+			<div class="slide">
+				<img src="images/Kaido123.png">
+				<div class="info">
+					<h2>Slide Name 5</h2>
+					<p>Lorem ipsum tayms 2 tayms 2</p>
+				</div>
+			</div>
+			<div class="slide">
+				<img src="images/Kaido123.png">
+				<div class="info">
+					<h2>Slide Name 6</h2>
+					<p>Lorem ipsum tayms 2 tayms 2</p>
+				</div>
+			</div>
+			<div class="navigation">
+				<div class="button active"></div>
+				<div class="button"></div>
+				<div class="button"></div>
+				<div class="button"></div>
+				<div class="button"></div>
+				<div class="button"></div>
+			</div>
+		</div> 
+	</section>
+
 	<footer>
 		<p>&copy; 2023 Art Fusion. All rights reserved.</p>
 	</footer>
