--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<header>
 		<div class="left_area">
+			<img src="images/Canvas Logo.png">
 			<h3 class="animate-charcter"> ART FUSION</h3>
 		</div>
 		<div class="navigation">
@@ -30,6 +31,7 @@
 		<div class="img-slider">
 
 			<div class="slide active">
+				<div class="background"><img src="images/Kaido123.png"></div>
 				<img src="images/Kaido123.png">
 				<div class="info">
 					<h2>Slide Name 1</h2>
@@ -37,35 +39,40 @@
 				</div>
 			</div>
 			<div class="slide">
-				<img src="images/Kaido123.png">
+				<div class="background"><img src="images/1.jpg"></div>
+				<img src="images/1.jpg">
 				<div class="info">
 					<h2>Slide Name 2</h2>
 					<p>Lorem ipsum tayms 2 tayms 2</p>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="images/Kaido123.png">
+				<div class="background"><img src="images/2.jpg"></div>
+				<img src="images/2.jpg">
 				<div class="info">
 					<h2>Slide Name 3</h2>
 					<p>Lorem ipsum tayms 2 tayms 2</p>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="images/Kaido123.png">
+				<div class="background"><img src="images/3.jpg"></div>
+				<img src="images/3.jpg">
 				<div class="info">
 					<h2>Slide Name 4</h2>
 					<p>Lorem ipsum tayms 2 tayms 2</p>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="images/Kaido123.png">
+				<div class="background"><img src="images/4.jpg"></div>
+				<img src="images/4.jpg">
 				<div class="info">
 					<h2>Slide Name 5</h2>
 					<p>Lorem ipsum tayms 2 tayms 2</p>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="images/Kaido123.png">
+				<div class="background"><img src="images/5.jpg"></div>
+				<img src="images/5.jpg">
 				<div class="info">
 					<h2>Slide Name 6</h2>
 					<p>Lorem ipsum tayms 2 tayms 2</p>
