--- a/index.html
+++ b/index.html
@@ -5,28 +5,48 @@
   
 	<title>Art Fusion</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Iceberg&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<!--Navigation Buttons-->
 	<header>
 		<div class="left_area">
 			<img src="images/Canvas Logo.png">
 			<h3 class="animate-charcter"> ART FUSION</h3>
 		</div>
 		<div class="navigation">
-		  <ul class="menu">
-			<div class="close-btn"></div>
-			<li class="menu-item"><a href="#">Home</a></li>
-			<li class="menu-item"><a href="artworks.html">Artworks</a></li>
-			<li class="menu-item"><a href="#">Cart</a></li>
-			<li class="menu-item"><a href="#">Contact</a></li>
-		  </ul>
-		</div>
-		<div class="menu-btn"></div>
+			<ul class="menu">
+			  <div class="close-btn"></div>
+			  <li class="menu-item"><a href="index.html">Home</a></li>
+			  <li class="menu-item"><a href="#">Artworks</a></li>
+			  <li class="menu-item">
+				<a class="sub-btn" href="#">Categories <i class="fas fa-angle-down"></i></a>
+				<ul class="sub-menu">
+				  <li class="sub-item more">
+					<a class="more-btn" href="#">2D ARTS <i class="fas fa-angle-right"></i></a>
+					<ul class="more-menu">
+					  <li class="more-item"><a href="#">GAME ASSETS</a></li>
+					  <li class="more-item"><a href="#">BACKGROUND</a></li>
+					</ul>
+				  </li>
+				  <li class="sub-item more">
+					<a class="more-btn" href="#">3D ARTS <i class="fas fa-angle-right"></i></a>
+					<ul class="more-menu">
+					  <li class="more-item"><a href="#">GAME ASSETS</a></li>
+					</ul>
+				  </li>
+				</ul>
+			  </li>
+			  <li class="menu-item"><a href="#">Cart</a></li>
+			  <li class="menu-item"><a href="#">Contacts</a></li>
+			</ul>
+		  </div>
 	  </header>
-
+	  <!--Image Slideshow-->
 	  <section class="slideshow">
 		<div class="img-slider">
 
@@ -88,12 +108,302 @@
 			</div>
 		</div> 
 	</section>
+<section>
+	<h2 class="section-title">Hot Deals!</h2>
+	<div class="container">
+		<div class="product">
+		  <div class="product-card">
+			<h2 class="name">Title1</h2>
+			<span class="price">$120.00</span>
+			<a class="popup-btn">Quick View</a>
+			<img src="images/1.jpg" class="product-img" alt="">
+		  </div>
+		  <div class="popup-view">
+			<div class="popup-card">
+			  <a><i class="fas fa-times close-btn"></i></a>
+			  <div class="product-img">
+				<img src="images/1.jpg" alt="">
+			  </div>
+			  <div class="info">
+				<h2>Title1<br><span>Subtitle1</span></h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<span class="price">$120.00</span>
+				<a href="#" class="add-cart-btn">Add to Cart</a>
+				<a href="#" class="add-wish">Add to Wishlist</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="product">
+		  <div class="product-card">
+			<h2 class="name">Title2</h2>
+			<span class="price">$100.00</span>
+			<a class="popup-btn">Quick View</a>
+			<img src="images/1.jpg" class="product-img" alt="">
+		  </div>
+		  <div class="popup-view">
+			<div class="popup-card">
+			  <a><i class="fas fa-times close-btn"></i></a>
+			  <div class="product-img">
+				<img src="images/1.jpg" alt="">
+			  </div>
+			  <div class="info">
+				<h2>Title<br><span>Subtitle1</span></h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<span class="price">$100.00</span>
+				<a href="#" class="add-cart-btn">Add to Cart</a>
+				<a href="#" class="add-wish">Add to Wishlist</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="product">
+		  <div class="product-card">
+			<h2 class="name">Title3</h2>
+			<span class="price">$250.00</span>
+			<a class="popup-btn">Quick View</a>
+			<img src="images/1.jpg" class="product-img" alt="">
+		  </div>
+		  <div class="popup-view">
+			<div class="popup-card">
+			  <a><i class="fas fa-times close-btn"></i></a>
+			  <div class="product-img">
+				<img src="images/1.jpg" alt="">
+			  </div>
+			  <div class="info">
+				<h2>Title<br><span>Subtitle</span></h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<span class="price">$250.00</span>
+				<a href="#" class="add-cart-btn">Add to Cart</a>
+				<a href="#" class="add-wish">Add to Wishlist</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="product">
+			<div class="product-card">
+			  <h2 class="name">Title4</h2>
+			  <span class="price">$120.00</span>
+			  <a class="popup-btn">Quick View</a>
+			  <img src="images/1.jpg" class="product-img" alt="">
+			</div>
+			<div class="popup-view">
+			  <div class="popup-card">
+				<a><i class="fas fa-times close-btn"></i></a>
+				<div class="product-img">
+				  <img src="images/1.jpg" alt="">
+				</div>
+				<div class="info">
+				  <h2>Title<br><span>Subtitle</span></h2>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				  <span class="price">$120.00</span>
+				  <a href="#" class="add-cart-btn">Add to Cart</a>
+				  <a href="#" class="add-wish">Add to Wishlist</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="product">
+			<div class="product-card">
+			  <h2 class="name">Title5</h2>
+			  <span class="price">$100.00</span>
+			  <a class="popup-btn">Quick View</a>
+			  <img src="images/1.jpg" class="product-img" alt="">
+			</div>
+			<div class="popup-view">
+			  <div class="popup-card">
+				<a><i class="fas fa-times close-btn"></i></a>
+				<div class="product-img">
+				  <img src="images/1.jpg" alt="">
+				</div>
+				<div class="info">
+				  <h2>Title<br><span>Subtitle</span></h2>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				  <span class="price">$100.00</span>
+				  <a href="#" class="add-cart-btn">Add to Cart</a>
+				  <a href="#" class="add-wish">Add to Wishlist</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="product">
+			<div class="product-card">
+			  <h2 class="name">Title6</h2>
+			  <span class="price">$250.00</span>
+			  <a class="popup-btn">Quick View</a>
+			  <img src="images/1.jpg" class="product-img" alt="">
+			</div>
+			<div class="popup-view">
+			  <div class="popup-card">
+				<a><i class="fas fa-times close-btn"></i></a>
+				<div class="product-img">
+				  <img src="images/1.jpg" alt="">
+				</div>
+				<div class="info">
+				  <h2>Title<br><span>Subtitle</span></h2>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				  <span class="price">$250.00</span>
+				  <a href="#" class="add-cart-btn">Add to Cart</a>
+				  <a href="#" class="add-wish">Add to Wishlist</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+	  </div>
+	  
+</section>	
 
-	<footer>
+<section>
+	<h2 class="section-title">Featured Artworks</h2>
+	<div class="container">
+		<div class="product">
+		  <div class="product-card">
+			<h2 class="name">Title1</h2>
+			<span class="price">$120.00</span>
+			<a class="popup-btn">Quick View</a>
+			<img src="images/1.jpg" class="product-img" alt="">
+		  </div>
+		  <div class="popup-view">
+			<div class="popup-card">
+			  <a><i class="fas fa-times close-btn"></i></a>
+			  <div class="product-img">
+				<img src="images/1.jpg" alt="">
+			  </div>
+			  <div class="info">
+				<h2>Title1<br><span>Subtitle1</span></h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<span class="price">$120.00</span>
+				<a href="#" class="add-cart-btn">Add to Cart</a>
+				<a href="#" class="add-wish">Add to Wishlist</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="product">
+		  <div class="product-card">
+			<h2 class="name">Title2</h2>
+			<span class="price">$100.00</span>
+			<a class="popup-btn">Quick View</a>
+			<img src="images/1.jpg" class="product-img" alt="">
+		  </div>
+		  <div class="popup-view">
+			<div class="popup-card">
+			  <a><i class="fas fa-times close-btn"></i></a>
+			  <div class="product-img">
+				<img src="images/1.jpg" alt="">
+			  </div>
+			  <div class="info">
+				<h2>Title<br><span>Subtitle1</span></h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<span class="price">$100.00</span>
+				<a href="#" class="add-cart-btn">Add to Cart</a>
+				<a href="#" class="add-wish">Add to Wishlist</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="product">
+		  <div class="product-card">
+			<h2 class="name">Title3</h2>
+			<span class="price">$250.00</span>
+			<a class="popup-btn">Quick View</a>
+			<img src="images/1.jpg" class="product-img" alt="">
+		  </div>
+		  <div class="popup-view">
+			<div class="popup-card">
+			  <a><i class="fas fa-times close-btn"></i></a>
+			  <div class="product-img">
+				<img src="images/1.jpg" alt="">
+			  </div>
+			  <div class="info">
+				<h2>Title<br><span>Subtitle</span></h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<span class="price">$250.00</span>
+				<a href="#" class="add-cart-btn">Add to Cart</a>
+				<a href="#" class="add-wish">Add to Wishlist</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="product">
+			<div class="product-card">
+			  <h2 class="name">Title4</h2>
+			  <span class="price">$120.00</span>
+			  <a class="popup-btn">Quick View</a>
+			  <img src="images/1.jpg" class="product-img" alt="">
+			</div>
+			<div class="popup-view">
+			  <div class="popup-card">
+				<a><i class="fas fa-times close-btn"></i></a>
+				<div class="product-img">
+				  <img src="images/1.jpg" alt="">
+				</div>
+				<div class="info">
+				  <h2>Title<br><span>Subtitle</span></h2>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				  <span class="price">$120.00</span>
+				  <a href="#" class="add-cart-btn">Add to Cart</a>
+				  <a href="#" class="add-wish">Add to Wishlist</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="product">
+			<div class="product-card">
+			  <h2 class="name">Title5</h2>
+			  <span class="price">$100.00</span>
+			  <a class="popup-btn">Quick View</a>
+			  <img src="images/1.jpg" class="product-img" alt="">
+			</div>
+			<div class="popup-view">
+			  <div class="popup-card">
+				<a><i class="fas fa-times close-btn"></i></a>
+				<div class="product-img">
+				  <img src="images/1.jpg" alt="">
+				</div>
+				<div class="info">
+				  <h2>Title<br><span>Subtitle</span></h2>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				  <span class="price">$100.00</span>
+				  <a href="#" class="add-cart-btn">Add to Cart</a>
+				  <a href="#" class="add-wish">Add to Wishlist</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="product">
+			<div class="product-card">
+			  <h2 class="name">Title6</h2>
+			  <span class="price">$250.00</span>
+			  <a class="popup-btn">Quick View</a>
+			  <img src="images/1.jpg" class="product-img" alt="">
+			</div>
+			<div class="popup-view">
+			  <div class="popup-card">
+				<a><i class="fas fa-times close-btn"></i></a>
+				<div class="product-img">
+				  <img src="images/1.jpg" alt="">
+				</div>
+				<div class="info">
+				  <h2>Title<br><span>Subtitle</span></h2>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				  <span class="price">$250.00</span>
+				  <a href="#" class="add-cart-btn">Add to Cart</a>
+				  <a href="#" class="add-wish">Add to Wishlist</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+	  </div>
+	  
+</section>	
+
+
+<footer>
 		<p>&copy; 2023 Art Fusion. All rights reserved.</p>
 	</footer>
 </body>
 
-<script src="javascript/myscripts.js"></script>
+<script src="javascript/myscripts.js" charset="UTF-8"></script>
 
 </html>
